--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@elastosfoundation/essentials-connector-cordova",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Elastos Essentials Connector for the Elastos Connectivity SDK.",
   "main": "dist/index.js",
-  "types": "index.d.ts",
+  "module": "dist.esm/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "prepublish": "npm run build"
   },
   "repository": {
@@ -13,8 +14,8 @@
     "url": "git+https://github.com/elastos/Elastos.Essentials.Connector.Client.Cordova.git"
   },
   "files": [
-    "index.d.ts",
-    "dist"
+    "dist",
+    "dist.esm"
   ],
   "keywords": [],
   "author": "Elastos Foundation",
@@ -24,14 +25,40 @@
   },
   "homepage": "https://github.com/elastos/Elastos.Essentials.Connector.Client.Cordova",
   "dependencies": {
+    "@elastosfoundation/elastos-connectivity-sdk-cordova": "^1.0.3",
     "moment": "^2.29.1",
     "web3": "~1.2.9",
     "web3-core": "1.2.9"
   },
   "devDependencies": {
-    "@elastosfoundation/elastos-connectivity-sdk-cordova": "^1.0.3",
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.2.0",
+    "@rollup/plugin-typescript": "^8.2.0",
+    "@tsconfig/svelte": "^1.0.10",
+    "css-loader": "^5.1.3",
+    "cssnano": "^4.1.10",
     "elastos-cordova-plugin-did": "git+https://github.com/elastos/Elastos.DID.Cordova.SDK.git",
     "elastos-cordova-plugin-hive": "git+https://github.com/elastos/Elastos.NET.Hive.Cordova.SDK.git",
-    "elastos-cordova-plugin-intent": "git+https://github.com/elastos/Elastos.Cordova.Plugins.Intent.git"
+    "elastos-cordova-plugin-intent": "git+https://github.com/elastos/Elastos.Cordova.Plugins.Intent.git",
+    "mini-css-extract-plugin": "^1.3.9",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^5.2.0",
+    "rollup": "^2.42.3",
+    "rollup-plugin-analyzer": "^4.0.0",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "svelte": "^3.35.0",
+    "svelte-check": "^1.2.5",
+    "svelte-i18n": "^3.3.6",
+    "svelte-loader": "^3.0.0",
+    "svelte-preprocess": "^4.6.9",
+    "swiper": "^6.5.0",
+    "tslib": "^2.0.0",
+    "typescript": "^4.2.3"
   }
 }
