--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastosfoundation/essentials-connector-cordova",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "Elastos Essentials Connector for the Elastos Connectivity SDK.",
   "main": "dist/index.js",
   "module": "dist.esm/index.js",
@@ -25,10 +25,12 @@
   },
   "homepage": "https://github.com/elastos/Elastos.Essentials.Connector.Client.Cordova",
   "dependencies": {
-    "@elastosfoundation/elastos-connectivity-sdk-cordova": "^1.0.3",
     "moment": "^2.29.1",
     "web3": "~1.2.9",
     "web3-core": "1.2.9"
+  },
+  "peerDependencies": {
+    "@elastosfoundation/elastos-connectivity-sdk-cordova": "^1.0.6"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.1.0",
