--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,9 @@
       "sourceMap": true,
       "types": [
         "web3-core/types",
-        "elastos-cordova-plugin-did",
-        "elastos-cordova-plugin-hive",
-        "elastos-cordova-plugin-intent"
+        "@elastosfoundation/elastos-cordova-plugin-did",
+        "@elastosfoundation/elastos-cordova-plugin-hive",
+        "@elastosfoundation/elastos-cordova-plugin-intent"
       ]
     },
     "include": ["src/**/*"],
