--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastosfoundation/essentials-connector-cordova",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Elastos Essentials Connector for the Elastos Connectivity SDK.",
   "main": "dist/index.js",
   "module": "dist.esm/index.js",
@@ -9,7 +9,7 @@
     "dev": "rollup -c -w",
     "prepublishOnly": "npm run build",
     "clean": "rm -rf dist/ dist.esm/",
-    "prepublish": "npm run build"
+    "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
@@ -42,6 +42,7 @@
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.0",
     "@tsconfig/svelte": "^1.0.10",
+    "@wessberg/rollup-plugin-ts": "^1.3.11",
     "css-loader": "^5.1.3",
     "cssnano": "^4.1.10",
     "mini-css-extract-plugin": "^1.3.9",
