--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@elastosfoundation/essentials-connector-cordova",
-  "version": "1.0.11",
+  "version": "1.0.13",
   "description": "Elastos Essentials Connector for the Elastos Connectivity SDK.",
   "main": "dist/index.js",
   "module": "dist.esm/index.js",
   "scripts": {
-    "build": "rollup -c",
+    "build": "npm run clean && npm run types && rollup -c",
     "dev": "rollup -c -w",
     "prepublishOnly": "npm run build",
-    "clean": "rm -rf dist/ dist.esm/",
+    "clean": "rm -rf dist/ dist.esm/ typings/",
+    "types": "tsc --emitDeclarationOnly --outDir typings/",
     "prepublish": "npm run clean && npm run build"
   },
   "repository": {
@@ -19,6 +20,7 @@
     "dist",
     "dist.esm"
   ],
+  "typings": "typings/",
   "keywords": [],
   "author": "Elastos Foundation",
   "license": "MIT",
@@ -32,7 +34,7 @@
     "web3-core": "1.2.9"
   },
   "peerDependencies": {
-    "@elastosfoundation/elastos-connectivity-sdk-cordova": "^1.0.17"
+    "@elastosfoundation/elastos-connectivity-sdk-cordova": "^1.0.19"
   },
   "devDependencies": {
     "@elastosfoundation/elastos-cordova-plugin-did": "^1.0.0",
@@ -40,7 +42,7 @@
     "@elastosfoundation/elastos-cordova-plugin-intent": "^1.0.0",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
-    "@rollup/plugin-typescript": "^8.2.0",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@tsconfig/svelte": "^1.0.10",
     "@wessberg/rollup-plugin-ts": "^1.3.11",
     "css-loader": "^5.1.3",
