--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@elastosfoundation/essentials-connector-cordova",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "Elastos Essentials Connector for the Elastos Connectivity SDK.",
   "main": "dist/index.js",
   "module": "dist.esm/index.js",
@@ -31,15 +31,12 @@
   "dependencies": {
     "moment": "^2.29.1",
     "web3": "~1.2.9",
-    "web3-core": "1.2.9"
-  },
-  "peerDependencies": {
-    "@elastosfoundation/elastos-connectivity-sdk-cordova": "^2.0.2"
+    "web3-core": "1.2.9",
+    "@elastosfoundation/elastos-connectivity-sdk-cordova": "^2.0.2",
+    "@elastosfoundation/elastos-cordova-plugin-did": "^1.0.0",
+    "@elastosfoundation/elastos-cordova-plugin-intent": "^2.0.0"
   },
   "devDependencies": {
-    "@elastosfoundation/elastos-cordova-plugin-did": "^1.0.0",
-    "@elastosfoundation/elastos-cordova-plugin-hive": "^1.0.0",
-    "@elastosfoundation/elastos-cordova-plugin-intent": "^2.0.0",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.2.0",
     "@rollup/plugin-typescript": "^8.2.1",
